Coded html shell, not yet compared to solution code

--- a/index.html
+++ b/index.html
@@ -24,6 +24,67 @@
 
   <!-- Add your site or application content here -->
   <p>Hello world! This is HTML5 Boilerplate.</p>
+
+  <header>
+    <img class="logo" src="" alt="unplugged logo">
+    <nav>
+      <ul>
+        <li>FAQ</li>
+        <li>About</li>
+      </ul>
+    </nav>
+    <section>
+      <h1>Retreat from the desk, return refreshed.</h1>
+      <img class="hero" src="" alt="photo of woman in woods on retreat">
+    </section>
+  </header>
+
+  <main>
+    <section class="form">
+      <h3>Want to join the next retreat?</h3>
+      <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+        <form>
+          <h3>Find out more</h3>
+          <input type="text" id="email">
+          <button type="button">Download Itinerary</button>
+        </form>
+      </section>
+      
+      <section class="">
+        <h2>Have the work week you always dreamed of - without the bad wifi</h2>
+        <p>Located in a peaceful bungalow outside of Lake Geneva, Wisconsin. </p>
+        <p>12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
+        <p>Private chef team providing on demand meals - just like your team kitchen.</p>
+        <p>5 outdoor obstacle courses, including private beach ½ mile from bungalow.</p>
+        <p>Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
+        <p>Dedicated computer room for times that you must wifi.</p>
+      </section>
+
+      <section class="reviews">
+        <h2>Be a better team in 5 days, like these.</h2>
+        <img src="" alt="group photo of retreat"
+        <p>LaCrue Bottling Co. October 2017</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+      </section>
+
+      <footer>
+        <section class="contact">
+          <h4>Contact</h4>
+          <p>555-555-5555</p>
+          <p>helllo@unplugged.com</p>
+        </section>
+        <section class="social">
+        </section>
+        <p>Copyright 2019 | Unplugged </p>
+      </footer>
+
+    </main>
+    
+
+
+
+
+
   <script src="js/vendor/modernizr-3.8.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
