--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
       <section class="reviews">
         <h2>Be a better team in 5 days, like these.</h2>
-        <img src="" alt="group photo of retreat"
+        <img src="" alt="group photo of retreat">
         <p>LaCrue Bottling Co. October 2017</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
       </section>
@@ -79,7 +79,7 @@
       </footer>
 
     </main>
-    
+
 
 
 
