--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Home</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -23,65 +23,133 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+ 
 
   <header>
-    <img class="logo" src="" alt="unplugged logo">
-    <nav>
-      <ul>
-        <li>FAQ</li>
-        <li>About</li>
-      </ul>
-    </nav>
-    <section>
-      <h1>Retreat from the desk, return refreshed.</h1>
-      <img class="hero" src="" alt="photo of woman in woods on retreat">
-    </section>
+    <div class="content-wrapper">
+      <a href="#">
+        <img src="" alt="unplugged logo">
+      </a>
+      <div class="header-divider"></div>
+      <nav>
+        <ul>
+          <li><a href="faq/index.html" target="_blank">FAQ</a></li>
+          <li><a href="about/index.html" target="_blank">About</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
   <main>
-    <section class="form">
-      <h3>Want to join the next retreat?</h3>
-      <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
-        <form>
+
+    <section class="hero-area">
+      <div class="content-wrapper">
+        <h1>Retreat from the desk, return refreshed.</h1>
+      </div>
+    </section>
+
+    <aside>
+      <div class="content-wrapper">
+        <div class="form-description">
+          <h3>Want to join the next retreat?</h3>
+          <p>
+            Find out when we are holding our next retreat and how your company or team can sign up!
+          </p>
+        </div>
+        <div class="form">
           <h3>Find out more</h3>
-          <input type="text" id="email">
-          <button type="button">Download Itinerary</button>
-        </form>
-      </section>
+          <input type="text" name="name" value="name@email.com">
+          <input type="button" value="Download Itinerary">
+        </div>
+      </div>
+      </aside>
       
-      <section class="">
-        <h2>Have the work week you always dreamed of - without the bad wifi</h2>
-        <p>Located in a peaceful bungalow outside of Lake Geneva, Wisconsin. </p>
-        <p>12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
-        <p>Private chef team providing on demand meals - just like your team kitchen.</p>
-        <p>5 outdoor obstacle courses, including private beach ½ mile from bungalow.</p>
-        <p>Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
-        <p>Dedicated computer room for times that you must wifi.</p>
+      <section class="features">
+        <div class="content-wrapper">
+          <h2>Have the work week you always dreamed of - without the bad wifi</h2>
+          <div class="features-items">
+            <article>
+              <p class="fontawesome-icon"></p>
+              <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin. 
+              </p>
+            </article>
+            <article>
+              <p class="fontawesome-icon"></p>
+              <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.
+              </p> 
+            </article>
+            <article>
+              <p class="fontawesome-icon"></p>
+              <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.
+              </p>
+            </article>
+            <article>
+              <p class="fontawesome-icon"></p>
+              <p class="features-item-description">5 outdoor obstacle courses, including private beach ½ mile from bungalow.
+              </p>
+            </article>
+            <article>
+              <p class="fontawesome-icon"></p>
+              <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to reset.
+              </p>
+            </article>
+            <article>
+              <p class="fontawesome-icon"></p>
+              <p class="features-item-description">Dedicated computer room for times that you must wifi.
+              </p>
+            </article>
+          </div>
+        </div>
       </section>
 
       <section class="reviews">
-        <h2>Be a better team in 5 days, like these.</h2>
-        <img src="" alt="group photo of retreat">
-        <p>LaCrue Bottling Co. October 2017</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+        <div class="content-wrapper">
+          <h2>Be a better team in 5 days, like these.</h2>
+          <article>
+            <div>
+              <img src="" alt="group photo of retreat">
+              <p>LaCrue Bottling Co. October 2017
+              </p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+              </p>
+            </div>
+          </article>
+        </div>
       </section>
-
-      <footer>
-        <section class="contact">
-          <h4>Contact</h4>
-          <p>555-555-5555</p>
-          <p>helllo@unplugged.com</p>
-        </section>
-        <section class="social">
-        </section>
-        <p>Copyright 2019 | Unplugged </p>
-      </footer>
 
     </main>
 
+    <footer>
+      <div class="content-wrapper">
+        <div class="footer-content">
+          <address class="contact">f
+            <h4>Contact</h4>
+            <p>
+              555-555-5555<br>
+              helllo@unplugged.com
+            </p>
+          </address>
+          <div class="social">
+            <h4>Social</h4>
+            <div class="social-icons">
+              <p>
+                <a href="https://www.facebook.com" target="_blank"></a>
+              </p>
+              <p>
+                <a href="https://twitter.com" target="_blank"></a>
+              </p>
+              <p>
+                <a href="https://www.instagram.com" target="_blank"></a>
+              </p>
+            </div>
+          </div>
+        </div> <!-- footer content ends -->
+      </div> <!-- footer content-wrapper ends -->
 
-
+      <div class="copyright">
+        <p>Copyright 2018 | Unplugged</p>
+      </div>
+    </footer>
 
 
 
