Fixed typos in html

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <footer>
       <div class="content-wrapper">
         <div class="footer-content">
-          <address class="contact">f
+          <address class="contact">
             <h4>Contact</h4>
             <p>
               555-555-5555<br>
