--- a/about/index.html
+++ b/about/index.html
@@ -23,7 +23,91 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  
+  <header>
+    <div class="content-wrapper">
+      <a href="#">
+        <img src="" alt="unplugged logo">
+      </a>
+      <div class="header-divider"></div>
+      <nav>
+        <ul>
+          <li><a href="faq/index.html" target="_blank">FAQ</a></li>
+          <li><a href="about/index.html" target="_blank">About</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+
+    <section class="mission-area">
+      <div class="content-wrapper">
+        <h1>Our Mission - we want to make you the team you always wanted to be.</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. 
+        </p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. 
+        </p>
+      </div>
+    </section>
+
+    <aside>
+      <div class="content-wrapper">
+        <div class="map"></div>
+      </div>
+    </aside>
+
+    <section class="contact-area">
+      <div class="content-wrapper">
+        <h4>Contact us, because you all need this.</h4>
+        <address>
+        <p>333 Main St. Lake Geneva, WI 53147<br>
+          555-555-5555<br>
+          hello@unplugged.com<br>
+        </p>
+      </address>
+      <address>
+        <h4>Chat with a facilitator</h4>
+        <p>555-555-5556<br>
+          facilitator@unplugged.com
+        </p>
+      </address>
+
+
+    <footer>
+      <div class="content-wrapper">
+        <div class="footer-content">
+          <address class="contact">
+            <h4>Contact</h4>
+            <p>
+              555-555-5555<br>
+              helllo@unplugged.com
+            </p>
+          </address>
+          <div class="social">
+            <h4>Social</h4>
+            <div class="social-icons">
+              <p>
+                <a href="https://www.facebook.com" target="_blank"></a>
+              </p>
+              <p>
+                <a href="https://twitter.com" target="_blank"></a>
+              </p>
+              <p>
+                <a href="https://www.instagram.com" target="_blank"></a>
+              </p>
+            </div>
+          </div>
+        </div> <!-- footer content ends -->
+      </div> <!-- footer content-wrapper ends -->
+
+      <div class="copyright">
+        <p>Copyright 2018 | Unplugged</p>
+      </div>
+    </footer>
+
+
+
   <script src="../js/vendor/modernizr-3.8.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="../js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
