--- a/about/index.html
+++ b/about/index.html
@@ -41,37 +41,46 @@
 
   <main>
 
-    <section class="mission-area">
+    <section class="mission">
       <div class="content-wrapper">
-        <h1>Our Mission - we want to make you the team you always wanted to be.</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. 
-        </p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. 
-        </p>
-      </div>
+        <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
+        <div class="mission-content">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. 
+          </p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. 
+          </p>
+        </div> <!-- mission-content wrapper ends -->
+      </div> <!-- content-wrapper for this section ends -->
     </section>
 
-    <aside>
-      <div class="content-wrapper">
-        <div class="map"></div>
-      </div>
-    </aside>
+    <section class="map">
+      <figure>
+      </figure>
+    </section>
 
-    <section class="contact-area">
+    <section class="contact-section">
       <div class="content-wrapper">
-        <h4>Contact us, because you all need this.</h4>
-        <address>
-        <p>333 Main St. Lake Geneva, WI 53147<br>
-          555-555-5555<br>
-          hello@unplugged.com<br>
-        </p>
-      </address>
-      <address>
-        <h4>Chat with a facilitator</h4>
-        <p>555-555-5556<br>
-          facilitator@unplugged.com
-        </p>
-      </address>
+        <h2>Contact us, because you all need this.</h2>
+        <address class="contact-content">
+          <div>
+            <h4>General Information</h4>
+            <p>333 Main St. Lake Geneva, WI 53147<br>
+              555-555-5555<br>
+              hello@unplugged.com
+            </p>
+          </div>
+          <div>
+            <h4>Chat with a facilitator</h4>
+            <p>555-555-5556<br>
+              facilitator@unplugged.com
+            </p>
+          </div> <!-- div within address tag contact-content ends -->
+        </address> 
+      </div> <!-- content-wrapper for this section ends -->
+    </section> <!-- contact-section for this section ends -->
+
+  </main>
+     
 
 
     <footer>
