--- a/faq/index.html
+++ b/faq/index.html
@@ -23,7 +23,100 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+
+<header>
+    <div class="content-wrapper">
+      <a href="#">
+        <img src="" alt="unplugged logo">
+      </a>
+      <div class="header-divider"></div>
+      <nav>
+        <ul>
+          <li><a href="faq/index.html" target="_blank">FAQ</a></li>
+          <li><a href="about/index.html" target="_blank">About</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+
+    <section class="mission">
+      <div class="content-wrapper">
+        <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
+        <div class="mission-content">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. 
+          </p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. 
+          </p>
+        </div> <!-- mission-content wrapper ends -->
+      </div> <!-- content-wrapper for this section ends -->
+    </section>
+
+    <section class="map">
+      <figure>
+      </figure>
+    </section>
+
+    <section class="questions">
+      <div class="content-wrapper">
+        <h2>Frequently Asked Questions</h2>
+          <div class="questions-content">
+            <h4>How do I get to the Unplugged retreat?</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing   elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.  
+            </p>
+            <h4>What size teams can you accommodate?</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing   elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.  
+            </p>
+            <h4>Is there really no wifi available?</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing   elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.  
+            </p>
+          </div>
+      </div> <!-- content-wrapper for this section ends -->
+    </section> <!-- "questions" section class for this section ends -->
+
+  </main>
+     
+
+
+    <footer>
+      <div class="content-wrapper">
+        <div class="footer-content">
+          <address class="contact">
+            <h4>Contact</h4>
+            <p>
+              555-555-5555<br>
+              helllo@unplugged.com
+            </p>
+          </address>
+          <div class="social">
+            <h4>Social</h4>
+            <div class="social-icons">
+              <p>
+                <a href="https://www.facebook.com" target="_blank"></a>
+              </p>
+              <p>
+                <a href="https://twitter.com" target="_blank"></a>
+              </p>
+              <p>
+                <a href="https://www.instagram.com" target="_blank"></a>
+              </p>
+            </div>
+          </div>
+        </div> <!-- footer content ends -->
+      </div> <!-- footer content-wrapper ends -->
+
+      <div class="copyright">
+        <p>Copyright 2018 | Unplugged</p>
+      </div>
+    </footer>
+
+
+
+
+
+
+
   <script src="../js/vendor/modernizr-3.8.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="../js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
