--- a/faq/index.html
+++ b/faq/index.html
@@ -39,43 +39,32 @@
     </div>
   </header>
 
-  <main>
 
-    <section class="mission">
-      <div class="content-wrapper">
-        <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
-        <div class="mission-content">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. 
-          </p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. 
-          </p>
-        </div> <!-- mission-content wrapper ends -->
-      </div> <!-- content-wrapper for this section ends -->
-    </section>
-
-    <section class="map">
-      <figure>
-      </figure>
-    </section>
-
-    <section class="questions">
+    <main class="faq">
       <div class="content-wrapper">
         <h2>Frequently Asked Questions</h2>
-          <div class="questions-content">
-            <h4>How do I get to the Unplugged retreat?</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing   elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.  
-            </p>
-            <h4>What size teams can you accommodate?</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing   elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.  
-            </p>
-            <h4>Is there really no wifi available?</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing   elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.  
-            </p>
-          </div>
-      </div> <!-- content-wrapper for this section ends -->
-    </section> <!-- "questions" section class for this section ends -->
-
-  </main>
+        <div class="faq-content">
+          <h4>How do I get to the Unplugged retreat?</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing   elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.  
+          </p>
+        </div>
+        <div class="faq-content">
+          <h4>What kind of team is right for the Unplugged retreat?</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+          dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+        </div>
+        <div class="faq-content">
+          <h4>What size teams can you accommodate?</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing   elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.  
+          </p>
+        </div>
+        <div class="faq-content">
+          <h4>Is there really no wifi available?</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing   elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.  
+          </p>
+        </div> <!-- faq-content div ends -->
+        </div> <!-- content-wrapper div ends -->
+      </main>
      
 
 
