--- a/faq/index.html
+++ b/faq/index.html
@@ -32,8 +32,8 @@
       <div class="header-divider"></div>
       <nav>
         <ul>
-          <li><a href="faq/index.html" target="_blank">FAQ</a></li>
-          <li><a href="about/index.html" target="_blank">About</a></li>
+          <li><a href="../index.html" target="_blank">Home</a></li>
+          <li><a href="../about/index.html" target="_blank">About</a></li>
         </ul>
       </nav>
     </div>
@@ -63,8 +63,8 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing   elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.  
           </p>
         </div> <!-- faq-content div ends -->
-        </div> <!-- content-wrapper div ends -->
-      </main>
+      </div> <!-- content-wrapper div ends -->
+    </main>
      
 
 
