Updated heading, paragraph font sizes etc and line heights and some background colors

--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
 
       <section class="reviews">
         <div class="content-wrapper">
-          <h3>Be a better team in 5 days, like these.</h3>
+          <h2>Be a better team in 5 days, like these.</h2>
           <article>
             <div>
-              <img>
+              <img6>
               <p>LaCrue Bottling Co. October 2017
               </p>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
