--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
   <header>
     <div class="content-wrapper">
       <a href="#">
-        <img src="" alt="unplugged logo">
+        <figure>
+          <img src="img/unpluggedlogo.png" alt="unplugged logo">
+        </figure>
       </a>
       <div class="header-divider"></div>
       <nav>
