Added images and image styles, including background images

--- a/faq/index.html
+++ b/faq/index.html
@@ -30,7 +30,9 @@
 <header>
     <div class="content-wrapper">
       <a href="#">
-        <img src="" alt="unplugged logo">
+        <figure>
+          <img src="../img/unpluggedlogo.png" alt="unplugged logo">
+        </figure>
       </a>
       <div class="header-divider"></div>
       <nav>
