--- a/index.html
+++ b/index.html
@@ -111,8 +111,10 @@
         <div class="content-wrapper">
           <h2>Be a better team in 5 days, like these.</h2>
           <article>
+            <figure>
+              <img src="img/omar-lopez-296944-unsplash-web.jpg" alt="retreat group photo in grassy field">
+            </figure>
             <div>
-              <img6>
               <h4>LaCrue Bottling Co.<br>
               October 2017
               </h4>
