--- a/about/index.html
+++ b/about/index.html
@@ -29,8 +29,10 @@
   
   <header>
     <div class="content-wrapper">
-      <a href="#">
-        <img src="" alt="unplugged logo">
+     <a href="#">
+        <figure>
+          <img src="../img/unpluggedlogo.png" alt="unplugged logo">
+        </figure>
       </a>
       <div class="header-divider"></div>
       <nav>
