--- a/about/index.html
+++ b/about/index.html
@@ -60,6 +60,7 @@
 
     <section class="map">
       <figure>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11787.940267692471!2d-71.08543230000001!3d42.3854646!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x1f5c182bab041e21!2sGauchao%20Brazilian%20Cuisine!5e0!3m2!1sen!2sus!4v1588797460301!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
       </figure>
     </section>
 
