--- a/index.html
+++ b/index.html
@@ -156,13 +156,19 @@
             <h4>Social</h4>
             <div class="social-icons">
               <p>
-                <a href="https://www.facebook.com" target="_blank"></a>
+                <a href="https://www.facebook.com" target="_blank">
+                  <i class="fab fa-facebook"></i>
+                </a>
               </p>
               <p>
-                <a href="https://twitter.com" target="_blank"></a>
+                <a href="https://linkedin.com" target="_blank">
+                  <i class="fab fa-linkedin"></i>
+                </a>
               </p>
               <p>
-                <a href="https://www.instagram.com" target="_blank"></a>
+                <a href="https://twitter.com" target="_blank">
+                  <i class="fab fa-twitter"></i>
+                </a>
               </p>
             </div>
           </div>
