Fixed links, margin and other touch ups

--- a/faq/index.html
+++ b/faq/index.html
@@ -32,7 +32,7 @@
 
 <header>
     <div class="content-wrapper">
-      <a href="#">
+      <a href="../index.html">
         <figure>
           <img src="../img/unpluggedlogo.png" alt="unplugged logo">
         </figure>
@@ -90,13 +90,19 @@
             <h4>Social</h4>
             <div class="social-icons">
               <p>
-                <a href="https://www.facebook.com" target="_blank"></a>
+                <a href="https://www.facebook.com" target="_blank">
+                  <i class="fab fa-facebook"></i>
+                </a>
+              </p>
+               <p>
+                <a href="https://linkedin.com" target="_blank">
+                  <i class="fab fa-linkedin"></i>
+                </a>
               </p>
               <p>
-                <a href="https://twitter.com" target="_blank"></a>
-              </p>
-              <p>
-                <a href="https://www.instagram.com" target="_blank"></a>
+                <a href="https://twitter.com" target="_blank">
+                  <i class="fab fa-twitter"></i>
+                </a>
               </p>
             </div>
           </div>
