--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   <header>
     <div class="content-wrapper">
-      <a href="#">
+      <a href="index.html">
         <figure>
           <img src="img/unpluggedlogo.png" alt="unplugged logo">
         </figure>
